changed some label sizes and text, fixed .container overflowing

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ canvas {
 .container {
   display: grid;
   width: 100%;
+  max-height: 100vh;
   min-height: 100vh;
   grid-auto-flow: row;
   grid-template-columns: 0.75fr 1.25fr 1fr;
